# techno_c_hw2

./: .gitignore  CMakeLists.txt  README.md  create_database.h  create_db.c  create_db_dynamic.c  data.txt  find.c  find.h  main.c  structs.c  structs.h  test.cpp
.github/: actions.yml
.github/workflows/: actions.yml
